<resources>
    <string name="app_name">DagasAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="login_username">"Username"</string>
    <string name="login_password">"Password"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usernameHint">"Username"</string>
    <string name="passwordHint">"Password"</string>
    <string name="emailHint">Email</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="register_button_text">Register</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_name">dagas</string>
    <string name="nav_header_email">dagas@gmail.com</string>
    <string name="nav_header_role">role</string>
    <string name="nav_header_desc">Navigation Header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createText">Create</string>
    <string name="cancelText">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="search">Search...</string>
    <string name="search_button_text">Search</string>
    <string name="disaster_text">Disaster</string>
    <string name="qrClaimed">This QR has already been claimed</string>
    <string name="qrExpired">This QR has already expired</string>
    <string name="full_name">\"Full Name: \"</string>
    <string name="email_text">\"Email: \"</string>
    <string name="role_text">\"Role: \"</string>
    <string name="delete_text">Delete</string>
    <string name="invalid_text">Invalid</string>
    <string name="accept_text">Accept</string>
    <string name="view_supply_text">View Supplies</string>
    <string name="manual_request_text">Manual donation</string>
    <string name="suggestion_text">View the transactions</string>
<!--    View a suitable recipient for your supplies-->
<!--    Don\'t like our suggestion? Try manual request search-->
</resources>